# chess

./: .gitignore  CMakeLists.txt  readme.md
resources/saved_games/: 1.txt  2.txt
src/: CMakeLists.txt  main.cpp
src/ai/: AI.cpp  AI.hpp
src/board/: Board.cpp  Board.hpp  Square.cpp  Square.hpp
src/game/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp
src/io/: Console.cpp  Console.hpp
src/moves/: Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/utils/: GameLogger.cpp  GameLogger.hpp  Timer.cpp  Timer.hpp
tests/: CMakeLists.txt  test_ai.cpp  test_complex_cases.cpp  test_console.cpp  test_game.cpp  test_game_state.cpp  test_move_generator.cpp  test_pawn.cpp  test_pieces.cpp  test_rook.cpp
